<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    >
    <TextView
        android:id="@+id/tv_denglu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Set"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/fl_top_title_bg"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_shezhi"
            android:background="@drawable/editback"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/Change_Password"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingLeft="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_shezhi"
            android:text="@string/Make_sure"
            android:background="@drawable/bt_public_bg"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:background="@drawable/bt_public_bg"
        android:text="@string/Set_alarmclock" />

    <TextView
        android:id="@+id/tv_laogong2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_denglu"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</LinearLayout>