<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk4"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_denglu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fl_top_title_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_denglu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_denglu"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/editback"
        android:paddingLeft="10dp"
        android:password="true"
        android:hint="@string/default_Password" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_denglu"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_denglu"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_denglu"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.38"
            android:background="@drawable/aboutus_buttonbg"
            android:text="@string/go"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


    </LinearLayout>
    <TextView
        android:id="@+id/tv_laogong"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_gywm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/aboutus_buttonbg"
        android:text="@string/about_us"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:onClick="doClick" />

</RelativeLayout>