<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_4"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_writedialy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fl_top_title_bg"
        android:gravity="center"
        android:text="@string/Write_Diary"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/scrolview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tv_writedialy"
        android:layout_marginBottom="55dp"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/liear1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrolview"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/liear1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/edit_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:cursorVisible="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/edit_days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:cursorVisible="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edit_winder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:hint="@string/Weather"
                    android:singleLine="true" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_writedialy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="top" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_writedialy"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_join"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Save"
                    android:background="@drawable/aboutus_buttonbg"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    />

                <Button
                    android:id="@+id/btn_clean"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Empty"
                    android:background="@drawable/aboutus_buttonbg"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>
                <Button
                    android:id="@+id/btn_open"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Background_music"
                    android:background="@drawable/aboutus_buttonbg"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:onClick="doclick"
                    />
                <Button
                    android:id="@+id/btn_close"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Close_music"
                    android:background="@drawable/aboutus_buttonbg"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:onClick="doclick"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>